force-app/main/default/objects/Opportunity_Relation__c/Opportunity_Relation__c.object-meta.xml
<CustomObject>
    <description>Connect opportunities with each other that have a relationship to each other</description>
    <label>Opportunity Relation</label>
    <nameField>
        <displayFormat>OppRel-{000000}</displayFormat>
        <label>Opportunity Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>