force-app/main/default/objects/Opportunity_Relation__c/fields/Parent_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Opportunity_Type__c</fullName>
    <label>Parent Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>SIM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>