force-app/main/default/objects/Opportunity_Relation__c/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Relations (Related Opportunity)</relationshipLabel>
    <relationshipName>Opportunity_Relations1</relationshipName>
    <type>Lookup</type>
</CustomField>