force-app/main/default/objects/Opportunity_Relation__c/fields/Relation_Type__c.field-meta.xml
<CustomField>
    <fullName>Relation_Type__c</fullName>
    <label>Relation Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>SIM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>